fix: center scrub buttons on mobile

--- a/src/components/home/timeline/TimelineStyles.scss
+++ b/src/components/home/timeline/TimelineStyles.scss
@@ -344,6 +344,10 @@ $bubble-size: 56px;
     display: none;
   }
 
+  #tl-scrub {
+    justify-content: center;
+  }
+
   #tl-card {
     grid-template-columns: 1fr;
     gap: 1rem;
